# ClaudeHMI-FW

./: .gitignore  CMakeLists.txt  HMI_MIGRATION.md  SESION_HMI.md  partitions.csv  sdkconfig  sdkconfig.defaults
components/cert_store/: CMakeLists.txt  cert_store.c
components/clock_mgr/: CMakeLists.txt  tz_map.c
components/diag/: CMakeLists.txt  mem_diag.c
components/display/: CMakeLists.txt  ft5x06.c  st7796.c
components/display/include/: display.h  esp_lcd_st7796.h  esp_lcd_touch_ft5x06.h  ft5x06.h  st7796.h  touch.h
components/drivers/: CMakeLists.txt  alarm_mgr.c  rtc_rv3028.c
components/network_core/: CMakeLists.txt  eth_mgr.c  ethernet_init.c  idf_component.yml  net_core.c  time_mgr.c  transport_mqtt.c  wifi_mgr.c
components/network_core/include/: eth_mgr.h  net_core.h  time_mgr.h  transport_mqtt.h  wifi_mgr.h
components/sensors_runtime/: CMakeLists.txt  sensors_runtime.c
components/state_pub/: CMakeLists.txt  state_pub.c
components/storage/: CMakeLists.txt  metrics_store.c  storage.c  storage_extras.c
components/task_tracer/: CMakeLists.txt  (+1 more)
components/transport_ble/: CMakeLists.txt  transport_ble.c
components/transport_ble/include/: transport_ble.h
components/ui_bind/: CMakeLists.txt  ui_statusbar_controller.c  ui_wifi_main_icon.c
components/ui_bind/include/: ui_statusbar_controller.h  ui_wifi_main_icon.h
main/: AppConfig copy.json  AppConfig.json  CMakeLists.txt  idf_component.yml  main.c  pinmap.h
main/ui/: ui.c  ui.h  ui_cfg.c  ui_cfg.h  ui_events.c  ui_events.h  ui_form.c  ui_form.h  ui_i18n.c  ui_i18n.h  ui_icons.h  ui_nav.c  ui_nav.h  ui_sd.c  ui_sd.h  ui_theme.h  ui_widgets.c  ui_widgets.h
main/ui/fonts/: mg_font_12.c  mg_font_14.c  mg_font_18.c  mg_font_22.c  mg_font_36.c  mg_num_48.c  ui_font_tabler16.c  ui_font_tabler20.c  ui_font_tabler28.c
main/ui/screens/: ui_bleAppScreen.c  ui_bleAppScreen.h  ui_confirmScreen.c  ui_confirmScreen.h  ui_connectivityScreen.c  ui_connectivityScreen.h  ui_datetimeScreen.c  ui_datetimeScreen.h  ui_generalScreen.c  ui_generalScreen.h  ui_generalSimpleScreen.c  ui_generalSimpleScreen.h  ui_infoScreen.c  ui_infoScreen.h  ui_keypadScreen.c  ui_keypadScreen.h  ui_loginScreen.c  ui_loginScreen.h  ui_mainScreen.c  ui_mainScreen.h  ui_netBleScreen.c  ui_netBleScreen.h  ui_netCloudScreen.c  ui_netCloudScreen.h  ui_netEthScreen.c  ui_netEthScreen.h  ui_netWifiScreen.c  ui_netWifiScreen.h  ui_pinScreen.c  ui_pinScreen.h  ui_sensorDiagScreen.c  ui_sensorDiagScreen.h  ui_sensorEditScreen.c  ui_sensorEditScreen.h  ui_splashScreen.c  ui_splashScreen.h
mockups/: 3a mainScreen-Normal.html  3b mainScreen-Alarma.html  4a Splash.html  4b mainScreen-Advertencia.html  4c mainScreen-Alarma-Silenciada.html  4d sensorScreen.html  4e generalScreen.html  4f infoScreen.html  4g Conectividad.html  5a PinDialog.html  5b sensorScreen-Editable.html  5c Keypad-Umbral.html  5d Confirmar-Cambio.html  5e generalScreen-Simple.html  5f Config-App-BLE.html
(+15 files in other folders)
